fix: adjust social links for mobile

--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8">
 <title>Kishta Matsakova</title>
-<link rel="stylesheet" href="style.css">
+<link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <header>
     <h1>Kishta Matsakova</h1>
+    <h2>RSSCHOOL CV</h2>
   </header>
-  <ul>
+  <main>
+    <a  class="a" href="photo.html"><img src="photo.jpg" alt="Photo" width="250" height="177"></a>
 <h2>Contact Info:</h2>
-<ul class="contacts">
+<ul>
 <li>City: Moscow, Russia</li>
 <li>E-mail adress: kishta.matsakova@gmail.com</li>
 <li>Phone number : +7(927)8147822</li>
 <li>Telegram account: Meldonium1</li>
 </ul>
 <h2>Summary</h2>
-<section>Personal qualities: the ability to work efficiently, conscientiousness in work, ability to quickly master a new software product or technology, the possession of creative abilities, the presence of the desire to work and earn.</section>
+<p>Personal qualities: the ability to work efficiently, conscientiousness in work, ability to quickly master a new software product or technology, the possession of creative abilities, the presence of the desire to work and earn.</p>
 <h2>Skills:</h2>
 <ol>
 <li>Web technology:</li>
@@ -37,7 +39,7 @@
 </ul>
 </ol>
 <h2>Code examples:</h2>
-<!--html
+````html
   <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -86,10 +88,14 @@
       </tr>
     </table>
   </body>
--->
+````
 <h2>Experience:</h2>
-<section>I passed the test and interview in Sberbank's programming School-21 and RSSchool.  At the moment I am actively developing my programming skills.</section>
+<p>I passed the test and interview in Sberbank's programming School-21 and RSSchool.  At the moment I am actively developing my programming skills.</p>
 <h2>Education:</h2>
-<section>VSU RPA of the Ministry of justice of Russia(2018-2023)</section>
+<p>VSU RPA of the Ministry of justice of Russia(2018-2023)</p>
 <h2>English:</h2>
-<section>Upper-Intermidiate. Had experiences of being a student of summer-school in Britain.</section>
+<p>Upper-Intermidiate. Had experiences of being a student of summer-school in Britain.</p>
+<footer>
+  kishta.matsakova@gmail.com
+</footer>
+</main>
