feat: add banner

--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="English">
   <head>
     <meta charset="utf-8">
-<title>Kishta Matsakova</title>
-<link href="default.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-  <header>
-    <h1>Kishta Matsakova</h1>
-    <h2>RSSCHOOL CV</h2>
-  </header>
+    <title>Kishta Matsakova</title>
+    <link href="default.css" rel="stylesheet">
+  </head>
+  <body>
+    <script src="app.js"></script>
+    <header>
+      <h1>Kishta Matsakova</h1>
+      <h2>RSSCHOOL CV</h2>
+    </header>
   <main>
-    <a  class="a" href="photo.html"><img src="photo.jpg" alt="Photo" width="250" height="177"></a>
-<h2>Contact Info:</h2>
-<ul>
-<li>City: Moscow, Russia</li>
-<li>E-mail adress: kishta.matsakova@gmail.com</li>
-<li>Phone number : +7(927)8147822</li>
-<li>Telegram account: Meldonium1</li>
-</ul>
-<h2>Summary</h2>
-<p>Personal qualities: the ability to work efficiently, conscientiousness in work, ability to quickly master a new software product or technology, the possession of creative abilities, the presence of the desire to work and earn.</p>
-<h2>Skills:</h2>
-<ol>
-<li>Web technology:</li>
-<ul>
-<li>HTML5</li>
-<li>CSS3</li>
-</ul>
-<li>Scripting languages:</li>
-<ul>Java Script
-<li>IDE:</li>
-<li>VS Code</li>
-</ul>
-<li>Version Control:</li>
-<ul>
-<li>Git</li>
-</ul>
-</ol>
-<h2>Code examples:</h2>
-````html
+    <a  class= "a" href="photo.html"><img src="photo.jpg" alt="Photo" width="300" height="180"></a>
+    <h2>Contact Info:</h2>
+    <ul>
+      <li>City: Moscow, Russia</li>
+      <li>E-mail adress: kishta.matsakova@gmail.com</li>
+      <li>Phone number : +7(927)8147822</li>
+      <li>Telegram account: Meldonium1</li>
+    </ul>
+    <h2>Summary</h2>
+      <p>Personal qualities: the ability to work efficiently, conscientiousness in work, ability to quickly master a new software product or technology, the possession of creative abilities, the presence of the desire to work and earn.</p>
+    <h2>Skills:</h2>
+    <ol>
+      <li>Web technology:</li>
+        <ul>
+          <li>HTML5</li>
+          <li>CSS3</li>
+        </ul>
+      <li>Scripting languages:</li>
+        <ul>
+          <li>Java Script</li>
+        </ul>
+      <li>IDE:</li>
+        <ul>
+          <li>VS Code</li>
+        </ul>
+      <li>Version Control:</li>
+        <ul>
+        <li>Git</li>
+        </ul>
+      </ol>
+    <h2>Code examples:</h2>
   <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -49,7 +52,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-         <h1>Результаты соревнования</h1> 
     <table class="results">
       <tr>
         <th >Игрок</th>
@@ -88,14 +90,13 @@
       </tr>
     </table>
   </body>
-````
-<h2>Experience:</h2>
-<p>I passed the test and interview in Sberbank's programming School-21 and RSSchool.  At the moment I am actively developing my programming skills.</p>
-<h2>Education:</h2>
-<p>VSU RPA of the Ministry of justice of Russia(2018-2023)</p>
-<h2>English:</h2>
-<p>Upper-Intermidiate. Had experiences of being a student of summer-school in Britain.</p>
-<footer>
-  kishta.matsakova@gmail.com
-</footer>
-</main>
+    <h2>Experience:</h2>
+      <p>I passed the test and interview in Sberbank's programming School-21 and RSSchool.  At the moment I am actively developing my programming skills.</p>
+    <h2>Education:</h2>
+      <p>VSU RPA of the Ministry of justice of Russia(2018-2023)</p>
+    <h2>English:</h2>
+      <p>Upper-Intermidiate. Had experiences of being a student of summer-school in Britain.</p>
+    <footer>
+      <p>kishta.matsakova@gmail.com</p>
+    </footer>
+  </main>
